# mantis

install/hexapod_mantis/share/hexapod_mantis/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hexapod_mantis/share/hexapod_mantis/cmake/: hexapod_mantisConfig-version.cmake  hexapod_mantisConfig.cmake
install/hexapod_mantis/share/hexapod_mantis/controllers/: Makefile
install/hexapod_mantis/share/hexapod_mantis/controllers/mantis/: .gitignore  Makefile  mantis.c  mantis.py
install/hexapod_mantis/share/hexapod_mantis/environment/: ament_prefix_path.dsv  path.dsv
install/hexapod_mantis/share/hexapod_mantis/launch/: webots_mantis.launch.xml
install/hexapod_mantis/share/hexapod_mantis/models/: 1A_link.dae  1A_link_collider.dae  1B_link.dae  1C_link.dae  A.dae  A_collider.dae  B.dae  B_collider.dae  C.dae  C_collider.dae  base.dae  base_collider.dae  base_link.dae
install/hexapod_mantis/share/hexapod_mantis/protos/: Mantis.proto
install/hexapod_mantis/share/hexapod_mantis/urdf/: dyna_hexa.urdf  dynamixel_hexapod.urdf
install/hexapod_mantis/share/hexapod_mantis/worlds/: .mantis.wbproj  .mantis1.wbproj  mantis copy.wbt  mantis.wbt  mantis1.wbt  test.wbt
src/hexapod_mantis/: CMakeLists.txt
src/hexapod_mantis/controllers/hexapod/: hexapod.py
src/hexapod_mantis/controllers/mantis/: mantis.py
src/hexapod_mantis/controllers/respaldo/: .gitignore
src/hexapod_mantis/launch/: view_dyna_hexa.launch.xml  webots_mantis.launch.xml
src/hexapod_mantis/models/: A.dae  A_collider.dae  B.dae  B_collider.dae  C.dae  C_collider.dae  base.dae  base_collider.dae
src/hexapod_mantis/protos/backgrounds/: TexturedBackground.proto  TexturedBackgroundLight.proto
src/hexapod_mantis/urdf/: dyna_hexa.urdf  dynamixel_hexapod.urdf
src/hexapod_mantis/urdf/.ipynb_checkpoints/: dyna_hexa-checkpoint.urdf  dynamixel_hexapod-checkpoint.urdf
src/hexapod_mantis/worlds/: .mantis.wbproj  .test.wbproj  mantis.wbt  mantis1.wbt  mantis2.wbt  test.wbt
(+15 files in other folders)
