<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hexapod_mantis</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="naomi.hernandez@ingenieria.unam.edu">naomi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pluginlib</depend>
  <depend>xacro</depend>

  <!-- <depend>webots_ros2_driver</depend>
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>forward_command_controller</depend> -->


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
